--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html  lang="en">
+<head>
+    <title>Hello!</title>
+</head>
 <body>
-Hello!
-</body></html>
+    Hello!
+</body>
+</html>
